fixed projects and posts overlapping on thin displays

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -83,6 +83,11 @@ h2 {
 .content-block {
     justify-content: space-evenly;
     display: flex;
+    flex: wrap;
+    align-items: flex-start;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: flex-start;
 }
 
 .projects, .posts {
@@ -92,5 +97,9 @@ h2 {
     border-color: #801336;
     width: 40%;
     min-height: 400px;
+    min-width: 400px;
     padding-top: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
+    position: relative;
 }
